--- a/03-Nomor Antrian/input.html
+++ b/03-Nomor Antrian/input.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Input</title>
 </head>
-<body>
-    <form id="appointment-form">
+<body style="text-align: center;">
+    <form id="appointment-form" style="font-size: larger;">
         <label for="waktu">Waktu:</label><br>
         <input type="time" id="waktu" name="waktu"><br>
         <label for="nama">Nama:</label><br>
